# sparktest

./: .dockerignore  .gitignore  .npmrc  .prettierignore  .vercelignore  CHANGELOG.md  CHANGESET_WORKFLOW.md  Cargo.toml  DEMO_DATA_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_FIX_SUMMARY.md  DEPLOYMENT_QUICKSTART.md  Dockerfile  Dockerfile.backend  FLY_DEPLOYMENT.md  GEMINI.md  Makefile  PUBLISHING.md  README.md  RUNNER_DEPLOYMENT.md  SECRETS_SETUP.md  TAGGING_SOLUTION.md  TESTING_CHANGESETS.md  copy-to-droplet.sh  deploy-runner.sh  docker-compose.prod.yml  fly.toml  package.json  pnpm-lock.yaml  setup-runner.sh  tsconfig.base.json  vercel.json
.cargo-changesets/: 20250902_091035.md  v1.1.0-production-ready.md  v1.2.1-bugfixes.md  v1.2.1-dev-experience.md
.changeset/: config.json  core-types-and-storage.md  initial-release.md  testing-and-deployment.md  ui-components.md  v1.1.0-release.md  v1.2.1-bugfixes.md  v1.2.1-dev-experience.md  v1.2.2-release.md
.deploy/: Dockerfile.backend  Dockerfile.frontend  Dockerfile.runner  README.md  deploy-mvp.sh  docker-compose.yml  entrypoint.sh  start-runner.sh
.github/ISSUE_TEMPLATE/: deployment-issue.md
.github/workflows/: ci-add-coverage.yml  ci-self-hosted.yml  ci.yml  deploy-fly.yml  deploy-runner.yml  deploy-vercel.yml  deploy.yml  nextjs-lint.yml  publish-cargo.yml  publish-npm.yml  rust-format.yml  test.yml
apps/oss/: .eslintrc.json  .gitignore  README.md  next.config.js  package.json  rust-api-schema.sql  tailwind.config.ts  tsconfig.json  vitest.config.mjs  vitest.setup.ts
apps/oss/__tests__/: test-utils.tsx
apps/oss/__tests__/api/: run-test.test.ts
apps/oss/__tests__/components/: delete-confirmation-modal.test.tsx  simple-sidebar.test.tsx  test-definition-utils.test.ts  theme-provider.test.tsx  trend-chart.test.tsx
apps/oss/__tests__/hooks/: use-sidebar.test.ts
apps/oss/__tests__/integration/: executor-selection.test.ts  test-definition-creation.test.ts
apps/oss/__tests__/lib/: navigation.test.ts
apps/oss/__tests__/pages/: definitions-page.test.tsx  executors-page.test.tsx  runs-page.test.tsx
apps/oss/__tests__/storage/: api-storage.test.ts  generic-storage.test.ts  hybrid-storage.test.ts  index.test.ts  local-storage.test.ts  sparktest-storage.test.ts
apps/oss/__tests__/utils/: navigation.test.ts  utils.test.ts  validation.test.ts
apps/oss/app/: client-layout.tsx  layout.tsx  page.tsx
apps/oss/app/active/: page.tsx
apps/oss/app/definitions/: page.tsx
apps/oss/app/executors/: page.tsx
apps/oss/app/new/: page.tsx
apps/oss/components/: app-sidebar.tsx  cluster-test-modal.tsx  dashboard-metrics.tsx  executor-form.tsx  executor-test-modal.tsx  floating-create-button.tsx  github-button.tsx  kubernetes-logs.tsx  navbar-collapse-trigger.tsx  new-test-form.tsx  page-transition.tsx  route-transition.tsx  run-details.tsx  run-test-form.tsx  run-test-form.tsx.backup  search-box.tsx  simple-sidebar.tsx  status-chart.tsx  suite-form.tsx  test-definition-cards.tsx  test-definition-form.tsx  test-definition-test-modal.tsx  test-definitions-list.tsx  test-list.tsx  test-runs-list.tsx  test-runs-list.tsx.backup  test-webhook-modal.tsx  top-header.tsx  trend-chart.tsx
apps/oss/contexts/: sidebar-context.tsx
apps/oss/hooks/: use-optimized-navigation.ts  use-queries.ts  use-search.ts  use-sidebar.ts
apps/oss/integration/: security-validation.test.ts
apps/oss/lib/: navigation.ts
apps/oss/styles/: globals.css
apps/oss/utils/: validation.ts
backend/: Cargo.toml  KUBERNETES.md
backend/api/: Cargo.toml
backend/api/src/: handlers.rs  k8s.rs  lib.rs  routes.rs
backend/core/: Cargo.toml
backend/core/src/: db.rs  lib.rs  models.rs
backend/migrations/: 0001_initial_schema_and_data.sql  0002_add_source_field.sql  0003_production_ready_data.sql  0004_working_test_examples.sql
backend/src/: k8s_tests.rs  main.rs  validation.rs
docs/: TEST_DEPLOYMENT_GUIDE.md  UPDATING_TESTS.md
scripts/: cargo-changeset.sh  create-tag.sh  migrate-ui-imports.sh  test-changesets.sh  validate-secrets.sh
(+88 files in other folders)
