[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "macros"] }
uuid = { version = "1", features = ["serde", "v4"] }
dotenvy = "0.15"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tokio-postgres = "0.7.13"
hyper = "1.6.0"
dotenv = "0.15.0"
chrono = { version = "0.4", features = ["serde"] }
kube = { version = "0.90", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.21", default-features = false, features = ["v1_28"] }
anyhow = "1.0.98"
git2 = "0.20.2"
log = "0.4.27"
tempfile = "3.20.0"
env_logger = "0.11.8"
regex = "1.10"

[dev-dependencies]
tokio-test = "0.4"
serde_json = "1.0"
tower = "0.4"
hyper = "1.6.0"
http-body-util = "0.1"
