[package]
name = "sparktest-core"
version = "0.1.0"
edition = "2021"
description = "Core types and database models for SparkTest"
license = "MIT"
repository = "https://github.com/kevintatou/sparktest"
homepage = "https://github.com/kevintatou/sparktest"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "macros"] }
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.36", features = ["full"] }
anyhow = "1.0"